Removed 2 routes
/doctors/:doctor_id/appointments
/doctors/:doctor_id/appointments/:id

Only logged in doctor or patient should be able to see information about their appointments (appointments_simple is still ok since it only shows dates)
