# swagger/v1/swagger.yaml
@@ -136,67 +136,6 @@ paths:
               required:
               - email
               - password
-  "/doctors/{doctor_id}/appointments":
-    get:
-      summary: Gets doctor's appointments
-      tags:
-      - Appointment
-      parameters:
-      - name: AuthorizationToken
-        in: header
-        schema:
-          type: string
-      - name: doctor_id
-        in: path
-        required: true
-        schema:
-          type: string
-      - name: page
-        in: query
-        schema:
-          type: string
-      - name: per_page
-        in: query
-        schema:
-          type: string
-      responses:
-        '200':
-          description: returns all doctor's appointments
-        '401':
-          description: authorization failed
-        '404':
-          description: doctor not found
-        '422':
-          description: invalid request
-  "/doctors/{doctor_id}/appointments/{id}":
-    get:
-      summary: Gets doctor's appointment
-      tags:
-      - Appointment
-      parameters:
-      - name: AuthorizationToken
-        in: header
-        schema:
-          type: string
-      - name: doctor_id
-        in: path
-        required: true
-        schema:
-          type: string
-      - name: id
-        in: path
-        required: true
-        schema:
-          type: string
-      responses:
-        '200':
-          description: returns doctor's appointment
-        '401':
-          description: authorization failed
-        '404':
-          description: doctor or appointment not found
-        '422':
-          description: invalid request
   "/doctors/{doctor_id}/appointments_simple":
     get:
       summary: Gets doctor's appointments (only dates)
